<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorGray"
                tools:context="com.example.lzw.team20.activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/div_tab_bar"/>
    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_background"
        android:layout_above="@+id/rg_tab_bar"/>
    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/bg_white"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:id="@+id/rb_table"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/ic_table"
            android:text="@string/title_table"/>
        <RadioButton
            android:id="@+id/rb_news"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/ic_news"
            android:text="@string/title_news"/>
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/ic_mine"
            android:text="@string/title_mine"/>
    </RadioGroup>

</RelativeLayout>