<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/login_bg"
              tools:context="com.example.lzw.team20.activity.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/avatar_default"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="请选择头像"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:hint="3-12位"
            android:maxLength="12"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="#A1A5AD"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="text"
            android:maxLines="1"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="6-16位"
            android:textColorHint="#A1A5AD"
            android:textColor="#000000"
            android:maxLines="1"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/text_confirm_password"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:id="@+id/view4"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />
        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:maxLines="1"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verify_code"
            android:textSize="15sp"
            android:textColor="@color/text_white"/>

        <EditText
            android:id="@+id/vericode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_get_verifi_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/action_get_verify_code"
            android:background="@drawable/waterfallitem_button_unable"
            android:maxLines="2"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/login_button"
            android:text="@string/action_register"
            android:textColor="#6BC0DB"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_returnlogin"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/returnlogin_button"
            android:text="返回登录"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>
