<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context="com.example.lzw.team20.activity.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_phone"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="text"
            android:maxLines="1"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="6-16位"
            android:textColorHint="#A1A5AD"
            android:textColor="#000000"
            android:maxLines="1"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/shape_white_frame"
        android:orientation="horizontal">
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/text_confirm_password"
            android:textSize="15sp"
            android:textColor="#85A5AD"/>
        <View
            android:id="@+id/view4"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />
        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:maxLines="1"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verify_code"
            android:textSize="15sp"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/vericode"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

        <Button
            android:id="@+id/btn_get_verifi_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/waterfallitem_button_unable"
            android:textColor="#ffffff"
            android:text="@string/action_get_verify_code"
            android:maxLines="2"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="30dp"
        android:text="确 认"
        android:background="@drawable/login_button"
        android:textColor="#6BC0DB"
        android:textStyle="bold" />
</LinearLayout>
